@@ -46,6 +46,9 @@ If enabled, allow modules to be plugged in at runtime.
 .TP
 .B modulespath
 This directory contains modules to be plugged in at runtime.
+.TP
+.B blacklist
+This file lists blacklisted moules, which cannot be executed during build.
 .SH MAILER SECTION
 .B fromaddr
 This is the address outgoing mails will originate from.
