@@ -48,6 +48,9 @@ modules: 1
 # Set this to the directory containing your debomatic modules
 modulespath: /usr/share/debomatic/modules
 
+# Set this to the blacklist file
+blacklist: /etc/debomatic/modules.blacklist
+
 [mailer]
 
 # Set this to your email address
