@@ -1,5 +1,6 @@
 0.9
 * Mailer support
+* Module blacklist support
 * Improved support for 3.0 package format
 
 0.8 "daking" (2010-02-04)
